added headerand nav information to the html page inlcuding link to link in resume.

--- a/index.html
+++ b/index.html
@@ -8,3 +8,15 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+<!--Header and Navigation sections-->
+<header>
+    <div>
+    <h1>Brent Graves</h1>
+    </div>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact Me</a>
+        <a href="https://www.linkedin.com/in/brent-graves-a69a9557/">Resume</a>
+    </nav>
+</header>
