added hero section to the html web page.

--- a/index.html
+++ b/index.html
@@ -20,3 +20,10 @@
         <a href="https://www.linkedin.com/in/brent-graves-a69a9557/">Resume</a>
     </nav>
 </header>
+<!--Hero-->
+<section class="hero-banner">
+    <img src="/advanced-portfolio/assets/images/brentimg.jpg" alt="Picture of Brent Graves">
+    <div>
+        <h2>Web Developer In Training</h2>
+    </div>
+</section>
