started mainsection about me with p tags also added class page-section id tag that is linked in the nav bar.

--- a/index.html
+++ b/index.html
@@ -27,3 +27,14 @@
         <h2>Web Developer In Training</h2>
     </div>
 </section>
+<main class="page-wrap">
+        <!--Description about me.-->
+        <section class="page-section" id="about">
+            <h2>About Me</h2>
+            <p>Hello There! My name is Brent Graves. I am currently enrolled in a coding Boot Camp at UCF. I look forward to learning programming languages. I look forward to to expanding my portfolio and showcasing my work in the weeks to come! This page will be updated to feature future projects I want to showcase here. Check back for more exciting projects to viewed here!</p>
+        </section>
+
+
+
+</main>
+</html>
