added first box to the flexbox in html.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
             <h2>About Me</h2>
             <p>Hello There! My name is Brent Graves. I am currently enrolled in a coding Boot Camp at UCF. I look forward to learning programming languages. I look forward to to expanding my portfolio and showcasing my work in the weeks to come! This page will be updated to feature future projects I want to showcase here. Check back for more exciting projects to viewed here!</p>
         </section>
-
+<!--Project Grids for portfolio further live links will be added as I progress!-->
+    <section class="page-section" id="work">
+        <h2 class="work-section">Work</h2>
+    <!--Code Refractor Project 1-->
+        <portal class="grids" >    
+            <a href="https://grave019.github.io/code-refractor/" class="flex-item refractor">
+                <div>
+                    <h3>Code Refractor</h3>
+                    <span>CSS & HTML</span>
+                </div>
+            </a>  
 
 
 </main>
