added second flexbox information to html.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                     <span>CSS & HTML</span>
                 </div>
             </a>  
+<!--Future project 2
+CSS Flexbox in Class project to be completed later. P
+please note that this links to flex box froggy and not a completed project. The image reflects an in class project This is more of a placeholder since I only have 1 completed project-->
+            <a href="/week-2/advanced-css-project/assets/images/css-cheatsheet.png" class="flex-item css">
+                <div>
+                    <h3>Cheatsheet</h3>
+                    <span>Flexbox</span>
+                </div>
+             </a>
 
 
 </main>
