added third flexbox information in html with corresponding style in CSS. I previously had this assignment completed but messed up my previous github folder with the wrong file.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <!--Hero-->
 <section class="hero-banner">
-    <img src="/advanced-portfolio/assets/images/brentimg.jpg" alt="Picture of Brent Graves">
+    <img src="/week-2/advanced-css-project/assets/images/brentimg.jpg" alt="Picture of Brent Graves">
     <div>
         <h2>Web Developer In Training</h2>
     </div>
@@ -53,7 +53,14 @@ please note that this links to flex box froggy and not a completed project. The 
                     <span>Flexbox</span>
                 </div>
              </a>
-
+<!--Future project 3
+Password Generator future project to be completed and linked to this page. Note that the link is not my page but a placeholder for a future project-->
+            <a href="/week-2/advanced-css-project/assets/images/password-generator.jpg" class="flex-item password">
+                <div>
+                        <h3>Password</h3>
+                        <span>Javascript</span>
+                </div>
+            </a>
 
 </main>
 </html>
