added the 4th flexbox in html and more style elements in css.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@ Password Generator future project to be completed and linked to this page. Note 
                         <span>Javascript</span>
                 </div>
             </a>
-
+<!--Future project 4
+Future project TBD linked at another time This is a placeholder-->
+            <a href="https://github.com/grave019" class="flex-item github">
+                <div>
+                        <h3>Github</h3>
+                        <span>HTML CSS JS</span>
+                </div>
+                    </a>
 </main>
 </html>
