added the 5th flexbox information to html.

--- a/index.html
+++ b/index.html
@@ -69,5 +69,14 @@ Future project TBD linked at another time This is a placeholder-->
                         <span>HTML CSS JS</span>
                 </div>
                     </a>
+                    <!--Future project 5 placeholder for now-->
+            <a href="https://www.google.com/" class="flex-item google">
+                <div>
+                    <h3>Placeholder</h3>
+                    <span>TBD Placeholder</span>
+                </div>
+            </a>
+        <portal/>
+    </section>
 </main>
 </html>
