added CSS fomax width at 500 px.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <!--Hero-->
 <section class="hero-banner">
-    <img src="/week-2/advanced-css-project/assets/images/brentimg.jpg" alt="Picture of Brent Graves">
+    <img src="./assets/images/brentimg.jpg" alt="Picture of Brent Graves">
     <div>
         <h2>Web Developer In Training</h2>
     </div>
@@ -79,4 +79,26 @@ Future project TBD linked at another time This is a placeholder-->
         <portal/>
     </section>
 </main>
+<!--Section about Contact information-->
+           
+<section class="page-section contact">
+    
+    <h2 id="contact">Contact Me</h2>
+    <div>
+        <address>
+                    <!--Github-->
+        <a href="https://github.com/grave019" target="_blank">Github</a>
+                     <!--Phone Number-->
+        <a href="205-470-2394">205-470-2394</a>
+                    <!--Email-->
+         <a href="mailto:graves.brent@gmail.com">graves.brent@gmail.com</a>
+                    <!--Facebook-->
+        <a href="https://www.facebook.com/brent.bucks.39">Facebook</a>
+                    <!--Linked In-->
+        <a href="https://www.linkedin.com/in/brent-graves-a69a9557/">Linked In</a>
+        </address>
+    </div>
+</section>
+</main>
+</body>
 </html>
