added CSS styling page is close to being done but still needs more work. Please give me feedback on how I can make it better.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--Hero-->
 <section class="hero-banner">
     <img src="./assets/images/brentimg.jpg" alt="Picture of Brent Graves">
-    <div>
+    <div class="hero-heading">
         <h2>Web Developer In Training</h2>
     </div>
 </section>
