changin room primary colors

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--Future project 2
 CSS Flexbox in Class project to be completed later. P
 please note that this links to flex box froggy and not a completed project. The image reflects an in class project This is more of a placeholder since I only have 1 completed project-->
-            <a href="/week-2/advanced-css-project/assets/images/css-cheatsheet.png" class="flex-item css">
+            <a href="./assets/images/css-cheatsheet.png" class="flex-item css">
                 <div>
                     <h3>Cheatsheet</h3>
                     <span>Flexbox</span>
@@ -55,7 +55,7 @@ please note that this links to flex box froggy and not a completed project. The 
              </a>
 <!--Future project 3
 Password Generator future project to be completed and linked to this page. Note that the link is not my page but a placeholder for a future project-->
-            <a href="/week-2/advanced-css-project/assets/images/password-generator.jpg" class="flex-item password">
+            <a href="./assets/images/password-generator.jpg" class="flex-item password">
                 <div>
                         <h3>Password</h3>
                         <span>Javascript</span>
